--- a/views/adminSearchAccount.pug
+++ b/views/adminSearchAccount.pug
@@ -49,6 +49,7 @@ html(lang='en')
                             strong #{results.length}
                             |  results found
                 .list-group.shadow.mb-5
+                  if(results.length > 0)
                     each result in results
                         a.list-group-item.list-group-item-action.p-4(href='/adminAccount?id=' + result.id)
                             .row
@@ -76,7 +77,8 @@ html(lang='en')
                                         .col-12.col-lg-3.align-self-center
                                             p.text-sm.text-muted Joined
                                             span.badge.badge-pill.p-2.badge-secondary-light #{result.date}
-            
+                  else
+                    img(src="/img/illustration/undraw_airport_2581.svg")  
     // Footer
     footer.position-relative.z-index-10.d-print-none
       // Main block - menus, subscribe form
