--- a/views/adminSearchBooking.pug
+++ b/views/adminSearchBooking.pug
@@ -73,6 +73,7 @@ html(lang='en')
                             strong #{bookings.length}
                             |  results found
                 .list-group.shadow.mb-5
+                  if(bookings.length > 0 )
                     each booking in bookings
                         a.list-group-item.list-group-item-action.p-4(href='/booking?id=' + booking.id)
                             .row
@@ -110,7 +111,8 @@ html(lang='en')
                                         //- .col-12.col-lg-3.align-self-center
                                             p.text-sm.text-muted Joined
                                             span.badge.badge-pill.p-2.badge-secondary-light #{result.date}
-            
+                  else
+                    img(src="/img/illustration/undraw_airport_2581.svg")
     // Footer
     footer.position-relative.z-index-10.d-print-none
       // Main block - menus, subscribe form
