--- a/views/myAccount.pug
+++ b/views/myAccount.pug
@@ -10,7 +10,7 @@ html(lang='en')
         // Breadcrumbs
         ol.breadcrumb.ps-0.justify-content-start
           li.breadcrumb-item
-            a(href='index.html') Home
+            a(href='/myAccount') Home
           li.breadcrumb-item.active Your account   
         h1.hero-heading.mb-0 Your account
         p.text-muted.mb-5 Manage your account and settings here.
@@ -31,7 +31,7 @@ html(lang='en')
                   svg.svg-icon.text-secondary.w-2rem.h-2rem
                     use(xlink:href='#pay-by-card-1')  
                 h5.card-title.mb-3
-                  a.text-decoration-none.text-dark.stretched-link(href='/bookingHistory') Booking History
+                  a.text-decoration-none.text-dark.stretched-link(href='/adminSearchBooking') Booking History
                 p.text-muted.card-text.text-sm Review payments, payouts, coupons, gift cards, and taxes
           //- .col-6.col-md-4.mb-30px
             .card.h-100.border-0.shadow.hover-animate
