push foter change

--- a/views/adminSearchAccount.pug
+++ b/views/adminSearchAccount.pug
@@ -79,121 +79,8 @@ html(lang='en')
                                             span.badge.badge-pill.p-2.badge-secondary-light #{result.date}
                   else
                     img(src="/img/illustration/undraw_airport_2581.svg")  
-    // Footer
-    footer.position-relative.z-index-10.d-print-none
-      // Main block - menus, subscribe form
-      .py-6.bg-gray-200.text-muted
-        .container
-          .row
-            .col-lg-4.mb-5.mb-lg-0
-              .fw-bold.text-uppercase.text-dark.mb-3 Directory
-              p Lorem ipsum dolor sit amet, consectetur adipisicing.
-              ul.list-inline
-                li.list-inline-item
-                  a.text-muted.text-primary-hover(href='#' target='_blank' title='twitter')
-                    i.fab.fa-twitter
-                li.list-inline-item
-                  a.text-muted.text-primary-hover(href='#' target='_blank' title='facebook')
-                    i.fab.fa-facebook
-                li.list-inline-item
-                  a.text-muted.text-primary-hover(href='#' target='_blank' title='instagram')
-                    i.fab.fa-instagram
-                li.list-inline-item
-                  a.text-muted.text-primary-hover(href='#' target='_blank' title='pinterest')
-                    i.fab.fa-pinterest
-                li.list-inline-item
-                  a.text-muted.text-primary-hover(href='#' target='_blank' title='vimeo')
-                    i.fab.fa-vimeo
-            .col-lg-2.col-md-6.mb-5.mb-lg-0
-              h6.text-uppercase.text-dark.mb-3 Rentals
-              ul.list-unstyled
-                li
-                  a.text-muted(href='index.html') Rooms
-                li
-                  a.text-muted(href='category-rooms.html') Map on top
-                li
-                  a.text-muted(href='category-2-rooms.html') Side map
-                li
-                  a.text-muted(href='category-3-rooms.html') No map
-                li
-                  a.text-muted(href='detail-rooms.html') Room detail
-            .col-lg-2.col-md-6.mb-5.mb-lg-0
-              h6.text-uppercase.text-dark.mb-3 Pages
-              ul.list-unstyled
-                li
-                  a.text-muted(href='compare.html') Comparison 
-                li
-                  a.text-muted(href='team.html') Team 
-                li
-                  a.text-muted(href='contact.html') Contact 
-            .col-lg-4
-              h6.text-uppercase.text-dark.mb-3 Daily Offers & Discounts
-              p.mb-3  Lorem ipsum dolor sit amet, consectetur adipisicing elit. At itaque temporibus.
-              form#newsletter-form(action='#')
-                .input-group.mb-3
-                  input.form-control.bg-transparent.border-dark.border-end-0(type='email' placeholder='Your Email Address' aria-label='Your Email Address')
-                  button.btn.btn-outline-dark.border-start-0(type='submit')
-                    i.fa.fa-paper-plane.text-lg
-      // Copyright section of the footer
-      .py-4.fw-light.bg-gray-800.text-gray-300
-        .container
-          .row.align-items-center
-            .col-md-6.text-center.text-md-start
-              p.text-sm.mb-md-0 © 2021, Your company. All rights reserved.
-            .col-md-6
-              ul.list-inline.mb-0.mt-2.mt-md-0.text-center.text-md-end
-                li.list-inline-item
-                  img.w-2rem(src='img/visa.svg' alt='...')
-                li.list-inline-item
-                  img.w-2rem(src='img/mastercard.svg' alt='...')
-                li.list-inline-item
-                  img.w-2rem(src='img/paypal.svg' alt='...')
-                li.list-inline-item
-                  img.w-2rem(src='img/western-union.svg' alt='...')
-    // JavaScript files
-    script.
-      // ------------------------------------------------------- //
-      //   Inject SVG Sprite -
-      //   see more here
-      //   https://css-tricks.com/ajaxing-svg-sprite/
-      // ------------------------------------------------------ //
-      function injectSvgSprite(path) {
-      var ajax = new XMLHttpRequest();
-      ajax.open("GET", path, true);
-      ajax.send();
-      ajax.onload = function(e) {
-      var div = document.createElement("div");
-      div.className = 'd-none';
-      div.innerHTML = ajax.responseText;
-      document.body.insertBefore(div, document.body.childNodes[0]);
-      }
-      }
-      // to avoid CORS issues when viewing using file:// protocol, using the demo URL for the SVG sprite
-      // use your own URL in production, please :)
-      // https://demo.bootstrapious.com/directory/1-0/icons/orion-svg-sprite.svg
-      //- injectSvgSprite('${path}icons/orion-svg-sprite.svg');
-      injectSvgSprite('https://demo.bootstrapious.com/directory/1-4/icons/orion-svg-sprite.svg');
-    // jQuery
-    script(src='vendor/jquery/jquery.min.js')
-    // Bootstrap JS bundle - Bootstrap + PopperJS
-    script(src='vendor/bootstrap/js/bootstrap.bundle.min.js')
-    // Magnific Popup - Lightbox for the gallery
-    script(src='vendor/magnific-popup/jquery.magnific-popup.min.js')
-    // Smooth scroll
-    script(src='vendor/smooth-scroll/smooth-scroll.polyfills.min.js')
-    // Bootstrap Select
-    script(src='vendor/bootstrap-select/js/bootstrap-select.min.js')
-    // Object Fit Images - Fallback for browsers that don't support object-fit
-    script(src='vendor/object-fit-images/ofi.min.js')
-    // Swiper Carousel
-    script(src='https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.4.1/js/swiper.min.js')
-    script.
-      var basePath = ''
-    // Main Theme JS file
-    script(src='js/theme.js')
-    // Daterange picker
-    script(src='https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js')
-    script(src='https://cdnjs.cloudflare.com/ajax/libs/jquery-date-range-picker/0.19.0/jquery.daterangepicker.min.js')
+    include common/footer_new.pug 
+    +footer()
     script(src='js/datepicker-search-page.js')
     script(src='js/accountSearch.js')
     // Price Slider
