--- a/views/login.pug
+++ b/views/login.pug
@@ -44,14 +44,14 @@ html(lang='en')
                 p.small.text-danger Password has successfully been reset
               .mb-4
                 label.form-label(for='email')  Email Address
-                input#email.form-control(name='email' type='email' placeholder='name@address.com' autocomplete='off' required=true data-msg='Please enter your email' value=(formData != undefined) ? formData.email : 'babezi@hotmail.com')
+                input#email.form-control(name='email' type='email' placeholder='name@address.com' autocomplete='off' required=true data-msg='Please enter your email' value=(formData != undefined) ? formData.email : 'rmillermcpherson4@gmail.com')
               .mb-4
                 .row
                   .col
                     label.form-label(for='password')  Password
                   .col-auto
                     a.form-text.small.text-primary(href='/forgotPassword') Forgot password?
-                input#password.form-control(name='password' placeholder='Password' type='password' required=true data-msg='Please enter your password' value=(formData != undefined) ? formData.password : 'welcome')
+                input#password.form-control(name='password' placeholder='Password' type='password' required=true data-msg='Please enter your password' value=(formData != undefined) ? formData.password : 'welcome11')
                 //-   .mb-4
                     .form-check
                     input#loginRemember.form-check-input(type='checkbox')
